docs: register lessons 07 through 09